Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66315

Clearing map items using Plugin with empty name causes segfault

    XMLWordPrintable

Details

    Description

       

      Trivially reproduced as follows (code also attached):

      import QtQuick 2.0
      import QtLocation 5.4
      
      Rectangle {
          width: 800
          height: 600
      
          Component.onCompleted: {
              map.clearMapItems();
          }
      
          /* NOTE: No plugin name is set. */
          Plugin { id: plugin }
      
          Map {
              id: map
      
              anchors.fill: parent
              plugin: plugin
          }
      }
      

      This is due to QDeclarativeGeoMap::clearMapItems calling m_map->clearMapItems() without checking if m_map is non-NULL. Looks to be a non-issue in Qt 5.10 and I believe the problem was introduced in Qt 5.9. Not sure if further 5.9 point releases are expected.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paangele Paolo Angelelli
            forest Forest Bond
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes