Fix crash calling Map.clearMapItems before Map is initialized

Task-number: QTBUG-66315
Change-Id: I18af392a00303b3b4c515c8f557e9c3fa09657eb
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>